css/style.css
/* ... */
#countdown li span {
      display: block;
    font-family: 'Nunito Sans', sans-serif;
    font-size: 60px;
    font-weight: 700;
    color: #ffff;
    letter-spacing: -1px;
}
@media all and (max-width: 768px) {
  #countdown li {
    font-size: 12px;
    padding: 15px;
  }
  #countdown li span {
    font-size: 60px;
  }
}


/* ======= Our Story style ======= */
.story .story-img {
    position: relative;
}
.story .story-img .img {
    padding: 0 30px 30px 15px;
    position: relative;
}
.story .story-img .img:before {
    content: '';
    position: absolute;
    top: 30px;
    right: 0;
    left: 45px;
    bottom: 0;
    border: 10px solid #DBA39A;
}
.story .story-img .img img {
    position: relative;
    z-index: 2;
}
.story .story-img:after {
    content: '';
    width: 90%;
    position: absolute;
    top: -18%;
    bottom: -25%;
    left: 0;
    background-image: url(../images/dots.png);
    background-repeat: repeat;
    z-index: -1;
}

.story-img-2 {
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    position: relative
}

.story-img .story-img-2 {
    width: 30% !important;
    height: 120px;
    position: absolute;
    top: 15px;
    right: 45px;
    z-index: 3;
}


@media screen and (max-width: 991px) {
.story-img .story-img-2 {
    width: 30% !important;
    height: 135px;
    position: absolute;
    top: 40px;
    right: 45px;
}
}


@media screen and (max-width: 768px) {
    .story-img .story-img-2 {
    width: 40% !important;
    height: 120px;
    position: absolute;
    top: 15px;
    right: 45px;
    }
}

/* =====  Gallery style  ===== */
.gallery-menu li a {
        cursor: pointer;
    display: block;
    color: #888;
    margin-bottom: 5px;
    padding: 5px 15px;
    transition: all 0.5s;
    margin-top: 0px;
}
.gallery-menu a.active,
.gallery-menu a:hover {
       color: #fff;
    background-color: #DBA39A;
}
.gallery-item {
    position: relative;
    padding: 15px;
}
.gallery-box {
    overflow: hidden;
    position: relative;
}
.gallery-box .gallery-img {
    position: relative;
    overflow: hidden;
    border-radius: 0;
}
.gallery-box .gallery-img:after {
    content: " ";
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 0;
    transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1);
}
.gallery-box .gallery-img>img {
    transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
    border-radius: 0;
}
.gallery-box .gallery-detail {
    opacity: 0;
    color: #FFF;
    width: 100%;
    padding: 20px;
    box-sizing: border-box;
    position: absolute;
    left: 0;
    overflow: hidden;
    transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1);
    text-align: center;
}
.gallery-box .gallery-detail h4 {
    font-family: 'Alex Brush', cursive;
    font-weight: 400;
    font-size: 24px;
    color: #fff;
}
.gallery-box .gallery-detail p {
    color: #fff;
}
.gallery-box:hover .gallery-detail {
    top: 50%;
    transform: translate(0, -50%);
    opacity: 1;
}
.gallery-box:hover .gallery-img:after {
    background: rgba(0, 0, 0, 0.4);
}
.gallery-box:hover .gallery-img>img {
    transform: scale(1.05);
}

/* =====  Button style  ===== */
.btn {
    padding: 0;
}
.buttono {
    position: relative;
    line-height: 1em;
    border: none;
}
.buttono a {
    font-family: 'Nunito Sans', sans-serif;
    background: #DBA39A;
    border: 1px solid #DBA39A;
    color: #fff;
    padding: 10px 20px;
    margin: 0;
    font-weight: 500;
    position: relative;
    font-size: 12px;
    text-transform: uppercase;
    letter-spacing: 2px;
}
.buttono a:after {
    content: '';
    width: 0;
    height: 100%;
    position: absolute;
    bottom: 0;
    left: 100%;
    z-index: 1;
    background: #fff;
    color: #000;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
.buttono a span {
    position: relative;
    z-index: 2;
}
.buttono a:hover:after {
    width: 100%;
    left: 0;
    -webkit-transition: width 0.3s ease;
    transition: width 0.3s ease;
}

.buttono a:hover,
.buttono a:hover span {
    color: #000;
}


/* ===== Footer style ===== */
.footer2 {
    padding: 90px 30px;
    background: #faf8f7;
}
.footer2 img { 
    width: 90px;
    margin-bottom: 10px;
}
.footer2 h2,
.footer2 h2 a {
    font-family: 'Cormorant Garamond', serif;
    font-size: 36px;
    font-weight: 500;
    display: block;
    width: 100%;
    position: relative;
    color: #000;
    line-height: 1em;
    letter-spacing: 0px;
    margin-bottom: 0;
}
.footer2 h2 a span,
.footer2 h2 span {
     display: block;
    font-family: 'Alex Brush', cursive;
    font-weight: 400;
    color: #000;
}
.footer2 h2 a i {
    color: #000;
    font-size: 16px;
    vertical-align: super;
}
.footer2 h6 {
    color: #888;
    margin-bottom: 0;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 14px;
}
.footer2 p {
    font-family: 'Cormorant Garamond', serif;
    font-size: 18px;
    font-style: italic;
    color: #888;
}
.footer2 .copyright {
    color: #888;
}
@media screen and (max-width: 768px) {
    .footer2 {
        padding: 100px 30px 80px 30px;
        text-align: center;
    }
}


/* ==== Preloader ==== */
.preloader{
  width: 100%;
  height: 100%;
  background: #fff;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10000;
  display: flex;
  align-items: center;
  justify-content: center;
}
/* Heart */
.lds-heart {
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
  transform: rotate(45deg);
  transform-origin: 32px 32px;
}
.lds-heart div {
  top: 23px;
  left: 19px;
  position: absolute;
  width: 26px;
  height: 26px;
  background: #DBA39A;
  animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
}
.lds-heart div:after,
.lds-heart div:before {
  content: " ";
  position: absolute;
  display: block;
  width: 26px;
  height: 26px;
  background: #DBA39A;
}
/* ... */

